--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,21 @@ after_success:
 
   # Log in to the docker CLI
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
+
   # Take images and push them to docker hub
   - docker push huckford/multi-client
   - docker push huckford/multi-nginx
   - docker push huckford/multi-server
   - docker push huckford/multi-worker
+
+deploy:
+  provider: elasticbeanstalk
+  region: 'eu-central-1'
+  app: 'multi-docker'
+  env: 'MultiDocker-env'
+  bucket_name: 'elasticbeanstalk-eu-central-1-925075551347'
+  bucket_path: 'docker-multi'
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
