--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ deploy:
   provider: elasticbeanstalk
   region: 'eu-central-1'
   app: 'multi-docker'
-  env: 'MultiDocker-env'
+  env: 'Multi-docker-env'
   bucket_name: 'elasticbeanstalk-eu-central-1-925075551347'
   bucket_path: 'docker-multi'
   on:
